<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin_top" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_row_margin"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_intro"
                style="@style/StyleButtonItem"
                android:layout_marginTop="20dip"
                android:text="@string/userintro" />

            <Button
                android:id="@+id/btn_question"
                style="@style/StyleButtonItem"
                android:layout_marginTop="20dip"
                android:text="@string/commonquestion" />

            <Button
                android:id="@+id/btn_feekback"
                style="@style/StyleButtonItem"
                android:layout_marginTop="20dip"
                android:text="@string/feedbackinfo" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>