<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_step"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fill_margin"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fill_margin"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <EditText
            android:id="@+id/timePic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_repeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fill_margin"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

        <Spinner
            android:id="@+id/repeat_spin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ListView
        android:id="@+id/home_item_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/listview_bg_color"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/tp_list_divider"
        android:dividerHeight="1dip"
        android:listSelector="#00000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/fill_margin_top"
        android:orientation="vertical" >

        <Button
            android:id="@+id/saveButton"
            style="@style/btn_common_oneline"
            android:background="@drawable/btn_green_big"
            android:text="@string/save" />

        <Button
            android:id="@+id/cancelButton"
            style="@style/btn_common_oneline"
            android:background="@drawable/btn_green_big"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>