<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <LinearLayout
            android:id="@+id/add_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/fill_margin"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/fill_margin_top"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/picture" />
            </LinearLayout>

            <ImageView
                android:id="@+id/add_image"
                android:layout_width="250dip"
                android:layout_height="125dip"
                android:layout_marginTop="20dip"
                android:scaleType="fitXY"
                android:src="@drawable/home_addscene" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_ll"
            android:layout_margin="@dimen/fill_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_step"
            android:layout_margin="@dimen/fill_margin"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/timePic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_time"
            android:layout_margin="@dimen/fill_margin"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repeat" />

            <Spinner
                android:id="@+id/repeat_spin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setdefaultcontrol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_step"
            android:layout_margin="@dimen/fill_margin"
            android:orientation="horizontal"
            android:visibility="visible" >

            <CheckBox
                android:id="@+id/cb_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="设置为默认遥控器" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_setdefaultcontrol"
            android:layout_gravity="center"
            android:layout_margin="@dimen/fill_margin_top"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/fill_margin_bottom"
                android:layout_marginTop="@dimen/fill_margin_top"
                android:gravity="center_vertical"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/saveButton"
                    style="@style/btn_common_oneline"
                    android:background="@drawable/btn_green_big"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancelButton"
                    style="@style/btn_common_oneline"
                    android:background="@drawable/btn_green_big"
                    android:text="@string/cancel"
                    android:visibility="visible" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>