<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/view_config" android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@color/win_bg_color"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:roundProgress="http://schemas.android.com/apk/res/com.home.homesmart">
    
    <com.home.view.CommonTitleView android:visibility="gone" android:id="@+id/toplayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true" />
    
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/toplayout">
        <LinearLayout android:orientation="vertical" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginTop="50.0dip" android:layout_marginBottom="30.0dip">
            <View android:background="@drawable/white_short_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
            <TextView android:textSize="16.0sp" android:textColor="#ffd0cecc" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/config_hint" />
            <View android:background="@drawable/white_short_line" android:layout_width="fill_parent" android:layout_height="1.0px" />
        </LinearLayout>
        <EditText android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/ssid_value" android:background="@drawable/edit_text_bg" android:padding="10.0dip" android:paddingRight="10.0dip" android:layout_width="255.0dip" android:layout_height="40.0dip" android:singleLine="true" android:drawableLeft="@drawable/icon_wifi" android:drawablePadding="5.0dip" />
        <EditText android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/pass" android:background="@drawable/edit_text_bg" android:padding="10.0dip" android:paddingRight="10.0dip" android:layout_width="255.0dip" android:layout_height="40.0dip" android:layout_marginTop="15.0dip" android:hint="@string/input_wifi_password" android:singleLine="true" android:drawableLeft="@drawable/icon_password" android:drawablePadding="5.0dip" android:imeOptions="actionDone" />
       
        
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/no_text" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip"  android:text="@string/no_config" android:clickable="true" />
        <TextView android:textSize="16.0sp" android:gravity="center" android:id="@id/err_text" android:padding="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/why_config_err" />
    </LinearLayout>
    <View android:id="@id/confing_anim_view" android:visibility="gone" android:background="@drawable/config_anmin_bg" android:layout_width="100.0dip" android:layout_height="100.0dip" android:layout_marginBottom="40.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <com.home.widget.CircleProgress android:id="@id/submit" android:layout_width="100.0dip" android:layout_height="100.0dip" roundProgress:roundColor="#C6E2FF" roundProgress:roundWidth="5dip" roundProgress:roundProgressColor="#CD3333" roundProgress:textIsDisplayable="false" roundProgress:textSize="16sp" />
        <TextView android:visibility="gone" android:textSize="16.0sp" android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/config_view" android:layout_width="70.0dip" android:layout_height="70.0dip" android:text="@string/config" />
    </FrameLayout>
</RelativeLayout>